--- a/adminka/Gemfile
+++ b/adminka/Gemfile
@@ -5,6 +5,8 @@ ruby "3.2.0"
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.0.6"
+gem 'dotenv-rails'
+gem 'telegram-bot-ruby', '~> 1.0.0'
 
 # The original asset pipeline for Rails [https://github.com/rails/sprockets-rails]
 gem "sprockets-rails"
