--- a/adminka/Gemfile
+++ b/adminka/Gemfile
@@ -7,6 +7,7 @@ ruby "3.2.0"
 gem "rails", "~> 7.0.6"
 gem 'dotenv-rails'
 gem 'telegram-bot-ruby', '~> 1.0.0'
+gem 'whenever', require: false
 
 # The original asset pipeline for Rails [https://github.com/rails/sprockets-rails]
 gem "sprockets-rails"
