--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Debug Local File",
       "type": "Ruby",
       "request": "launch",
-      "program": "${workspaceRoot}/start-bot-moderator.rb"
+      "program": "${workspaceRoot}/start-bot-main.rb"
     }
   ]
 }
