--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,22 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Debug Local File",
-      "type": "Ruby",
+      "type": "ruby_lsp",
+      "name": "Debug",
       "request": "launch",
-      "program": "${workspaceRoot}/start-bot-main.rb"
+      "program": "ruby ${file}"
+    },
+    {
+      "type": "ruby_lsp",
+      "request": "launch",
+      "name": "Debug test file",
+      "program": "ruby -Itest ${relativeFile}"
+    },
+    {
+      "type": "ruby_lsp",
+      "request": "attach",
+      "name": "Attach to existing server"
     }
   ]
 }
