--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,9 +3,16 @@
   "configurations": [
     {
       "type": "ruby_lsp",
+      "request": "launch",
+      "name": "Debug program",
+      "program": "ruby "
+    },
+    {
+      "type": "ruby_lsp",
       "name": "Debug",
       "request": "launch",
-      "program": "ruby ${file}"
+      // "program": "bundle exec ruby start-bot-main.rb"
+      "program": "bundle exec ruby start-bot-moderator.rb"
     },
     {
       "type": "ruby_lsp",
