commit before refactoring

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
       "type": "ruby_lsp",
       "name": "Debug",
       "request": "launch",
-      // "program": "bundle exec ruby start-bot-main.rb"
-      "program": "bundle exec ruby start-bot-moderator.rb"
+      "program": "bundle exec ruby start-bot-main.rb"
+      // "program": "bundle exec ruby start-bot-moderator.rb"
     },
     {
       "type": "ruby_lsp",
