--- a/adminka/test/fixtures/configs.yml
+++ b/adminka/test/fixtures/configs.yml
@@ -1,4 +1,12 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: configs
+#
+#  id                                 :bigint           not null, primary key
+#  for_private_channel_video_file_ids :string           default([]), is an Array
+#  created_at                         :datetime         not null
+#  updated_at                         :datetime         not null
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the "{}" from the fixture names and add the columns immediately
