--- a/adminka/test/fixtures/counters.yml
+++ b/adminka/test/fixtures/counters.yml
@@ -1,4 +1,12 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: counters
+#
+#  id                        :bigint           not null, primary key
+#  lookup_requests_from_bots :integer          default(0)
+#  created_at                :datetime         not null
+#  updated_at                :datetime         not null
+#
 
 one:
   lookup_requests_from_bots: 1
