--- a/adminka/test/fixtures/users.yml
+++ b/adminka/test/fixtures/users.yml
@@ -1,4 +1,24 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: users
+#
+#  id                        :bigint           not null, primary key
+#  chat_member_status        :string
+#  date_when_became_a_scamer :datetime
+#  first_name                :string
+#  justification             :text
+#  last_name                 :string
+#  lg                        :string
+#  state_aasm                :string
+#  status                    :string           default("not_scamer:default")
+#  username                  :string
+#  created_at                :datetime         not null
+#  updated_at                :datetime         not null
+#  complaint_id              :string
+#  cur_complaint_id          :string
+#  cur_message_id            :string
+#  telegram_id               :string
+#
 
 one:
   telegram_id: MyString
