--- a/adminka/config/database.yml
+++ b/adminka/config/database.yml
@@ -56,7 +56,11 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-# test:
+test:
+  <<: *default
+  database: black-list_adminka_test
+  username: g
+  password: g
 #   <<: *default
 #   database: adminka_test
 
